新增抽签功能，现在支持初始化cmd的工作目录